Upgrade under main menu Add file reader